--- a/styles.css
+++ b/styles.css
@@ -288,7 +288,7 @@ a{
 
     & .products{
       width: 100% !important;
-      grid-template-columns: repeat(2, 1fr) !important;
+      grid-template-columns: 1fr !important;
     }
   }
 }
