--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ a{
     padding: 50px 8%;
 
     & .products{
-      grid-template-columns: 1fr !important;
+      grid-template-columns: 1fr;
 
     }
   }
